# TiDHy

./: .gitignore  .pylintrc  CalMS21_State_Annotation_Analysis.ipynb  README.md  Rossler_SupFigure01.ipynb  Run_ARHMM.py  Run_LSTM.py  Run_SSM.py  Run_TiDHy.py  Run_TiDHy_NNX_vmap.py  TiDHy_Figures02.ipynb  TiDHy_Figures03.ipynb  TiDHy_Figures04.ipynb  TiDHy_Figures_revision01.ipynb  TiDHy_Figures_revision02.ipynb  TiDHy_JaxTest01.ipynb  TiDHy_SupFigures01.ipynb  compare_tidhy_slds.py  environment.yaml  pyproject.toml  requirements-nnx.txt  requirements-torch.txt  requirements.txt  setup.cfg  setup.py  setup_ssm_env.sh  setup_tidhy_env.sh  slurm_run.py  ssm_environment.yml  test_configs.py  test_path_override.py
TiDHy/: Evaluate_TiDHy.py  Train_TiDHy.py  __init__.py
TiDHy/datasets/: __init__.py  datasets.py  datasets_dynamax.py  load_data.py  rossler_dataset.py
TiDHy/models/: IMPLEMENTATION_COMPARISON.md  JAX_TRANSLATION_README.md  LSTM_baseline.py  LSTM_training.py  NNX_TRANSLATION_README.md  README_JAX_IMPLEMENTATIONS.md  TiDHy.py  TiDHy_jax_example.py  TiDHy_jax_inference.py  TiDHy_nnx.py  TiDHy_nnx_example.py  TiDHy_nnx_training.py  TiDHy_nnx_vmap.py  TiDHy_nnx_vmap_training.py  __init__.py
TiDHy/utils/: TiDHy_jax.py  __init__.py  analysis.py  analysis_plotting.py  comparison_plots.py  interpretability.py  io_dict_to_hdf5.py  logging.py  path_utils.py  plotting.py  slds_analysis.py  state_annotation_comparison.py  tfp_jax_patch.py  utils.py
conf/: config.yaml
conf/dataset/: AnymalTerrain.yaml  CalMS21.yaml  LDS.yaml  SLDS.yaml  SSM.yaml
conf/dataset/model/: default_model.yaml
conf/paths/: glados.yaml  glados_run.yaml  laptop.yaml  walle.yaml  walle_multi.yaml  walle_run.yaml
configs/: config.yaml
configs/dataset/: AnymalTerrain.yaml  CalMS21.yaml  LDS.yaml  Rossler.yaml  SLDS.yaml  SSM.yaml
configs/dataset/model/: default_model.yaml  sparsity.yaml
configs/experiment/: paired_sweep.yaml  seed_sweep.yaml
configs/model/: default_model.yaml  lstm.yaml  r2_hybrid.yaml  r2_smooth.yaml  r2_sparse.yaml  sparsity.yaml  ssm_baseline.yaml
configs/paths/: hyak.yaml  laptop.yaml  walle.yaml  workstation.yaml
